后台样式更新

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
 
 <body>
     <div id="app"></div>
-    <link rel="stylesheet" href="{{ asset('css/app.css') }}">
-    <script src="{{ asset('js/app.js') }}"></script>
+    <link rel="stylesheet" href="/css/app.css">
+    <script src="js/app.js"></script>
     <script id="__bs_script__">//<![CDATA[
     document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.26.7'><\/script>".replace("HOST", location.hostname));
 //]]></script>
